# clash-matrix-multiplication

./: README.md  cabal.project  clash-matrix-blogpost.cabal  stack.yaml
src/Clash/Blog/MM/: Main.hs
